<resources>
		<string name="app_name">Find Donors</string>
		<string name="splash_screen_img_desc">Splash Screen Image</string>
		<string name="sign_in_frgt_pwd">Forgot Password?</string>
		<string name="sign_in_btn">SIGN IN</string>
		<string name="sign_up_hint_ques">New User?</string>
		<string name="sign_up_txt">Sign Up Here</string>
		<string name="or">OR</string>
		<string name="sign_in_email_hint">Email Address</string>
		<string name="sign_in_pwd_hint">Password</string>
		<string name="sign_in_with_google">Sign In with Google</string>
		<string name="signUpActivityTitle">Sign Up</string>
		<string name="signup_hint_fn">Full Name</string>
		<string name="sign_up_email_hint">Email Address</string>
		<string name="sign_up_pwd_hint">Password</string>
		<string name="sign_up_cpwd_hint">Confirm Password</string>
		<string name="sign_up_btn">SIGN UP</string>
		<string name="sign_up_terms"><![CDATA[By clicking sign up, you are agree to our terms and conditions]]></string>
		<string name="menu_signup_terms">T&amp;C</string>
		<string name="emailValidationError">Enter valid email address</string>
		<string name="notifications_icon_title">Notifications</string>
		<string name="userName">Not Specified</string>
		<string name="userPhone">Not Specified</string>
		<string name="followings_label">Followings</string>
		<string name="followers_label">Followers</string>
		<string name="followings_count">0</string>
		<string name="followers_count">0</string>
		<string name="edit_profile_icon_title">Edit Profile</string>
		<string name="next_btn_text">Next</string>
		<string name="slash_symbol">/</string>
		<string name="onBoard_page_start_count">1</string>
		<string name="onBoard_page_total_count">3</string>
		<string name="back_btn_text">Back</string>

		<string name="hello_blank_fragment">Hello blank fragment</string>
		<string name="what_is_your_name_label">What is your name?</string>
		<string name="what_is_your_birthday_label">What is Your Birthday?</string>
		<string name="select_birthday_hint">Select Birthday</string>
		<string name="what_is_your_blood_group_label">What is Your Blood Group?</string>
		<string name="you_are_label">You are?</string>
		<string name="enter_your_full_name_hint">Enter Your Full Name</string>
		<string name="sign_up_name_hint">Full Name</string>
		<string name="sign_up_phone_hint">Phone Number</string>
		<string name="personal_details_label">Personal Details</string>
		<string name="name_icon_desc">Name Icon</string>
		<string name="contact_details_label">Contact Details</string>
		<string name="full_name_label">Full Name</string>
		<string name="address_label">Address</string>
		<string name="address_content">Not Specified</string>
		<string name="more_setting_icon_desc">more_setting_icon</string>
		<string name="gender_label">Gender</string>
		<string name="email_address_label">Email Address</string>
		<string name="male_txt">Not Specified</string>
		<string name="gender_icon_desc">Gender Icon</string>
		<string name="birth_day_label">Birth Day</string>
		<string name="bday_txt">Not Specified</string>
		<string name="phone_icon_desc">Phone Icon</string>
		<string name="phone_txt">Not Specified</string>
		<string name="email_txt">Not Specified</string>
		<string name="blood_group_label">Blood Group</string>
		<string name="blood_group_txt">Not Specified</string>
		<string name="full_name_txt">Not Specified</string>
		<string name="phone_label">Phone Number</string>
		<string name="make_private">Make Private</string>
		<string name="edit">Edit Details</string>
		<string name="make_public">Make Public</string>
		<string name="private_or_public">Private Or Public</string>
		<string name="select_birthday">Select</string>
		<string name="epd_show_exit_title">Do you want to exit?</string>
		<string name="epd_show_exit_message">Your changes will not be saved</string>
		<string name="yes">YES</string>
		<string name="no">NO</string>
		<string name="phone_number_label">Phone Number</string>
		<string name="state_label">State</string>
		<string name="district_label">District</string>

</resources>
