<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rejimalson.finddonors.activity.SignInActivity">

    <RelativeLayout
        android:id="@+id/mainRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:focusableInTouchMode="true">

        <requestFocus/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/si_relativeLayout">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/si_email_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <com.rejimalson.finddonors.helper.EditextErrorIcon
                    android:id="@+id/si_input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/sign_in_email_hint"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/si_pwd_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/si_email_input_layout"
                android:layout_marginTop="10dp">

                <com.rejimalson.finddonors.helper.EditextErrorIcon
                    android:id="@+id/si_input_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/sign_in_pwd_hint"
                    android:inputType="textPassword"
                    android:textColor="@color/black"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sign_in_frgt_pwd_id"
                android:layout_below="@+id/si_pwd_input_layout"
                android:text="@string/sign_in_frgt_pwd"
                android:layout_alignEnd="@+id/si_pwd_input_layout"
                android:layout_alignRight="@+id/si_pwd_input_layout"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sign_in_btn_id"
                android:layout_below="@+id/sign_in_frgt_pwd_id"
                android:text="@string/sign_in_btn"
                android:textColor="@color/white"
                android:background="@color/actionBarColor"
                android:layout_alignStart="@+id/si_pwd_input_layout"
                android:layout_alignLeft="@+id/si_pwd_input_layout"
                android:layout_marginTop="40dp"
                android:textSize="16sp"
                android:elevation="2dp"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newUser_hint_layout"
            android:layout_below="@+id/si_relativeLayout"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sign_up_hint_id"
                android:text="@string/sign_up_hint_ques"
                android:textSize="16sp"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_signup_id"
                android:text="@string/sign_up_txt"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/actionBarColor"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>