<?xml version="1.0" encoding="utf-8"?>
<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rejimalson.finddonors.activity.SignUpActivity">

    <RelativeLayout
        android:id="@+id/mainRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:focusableInTouchMode="true">

        <requestFocus/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/su_relativeLayout">

		        <android.support.design.widget.TextInputLayout
				        android:id="@+id/su_name_input_layout"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:layout_marginTop="15dp">

				        <com.rejimalson.finddonors.helper.EditextErrorIcon
						        android:id="@+id/su_input_name"
						        android:layout_width="match_parent"
						        android:layout_height="wrap_content"
						        android:maxLines="1"
						        android:hint="@string/sign_up_name_hint"
						        android:inputType="textPersonName|textCapWords"
						        android:textColor="@color/black"/>

		        </android.support.design.widget.TextInputLayout>

		        <android.support.design.widget.TextInputLayout
				        android:id="@+id/su_phone_input_layout"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:layout_marginTop="10dp"
				        android:layout_below="@+id/su_name_input_layout">

				        <com.rejimalson.finddonors.helper.EditextErrorIcon
						        android:id="@+id/su_input_phone"
						        android:layout_width="match_parent"
						        android:layout_height="wrap_content"
						        android:maxLines="1"
						        android:hint="@string/sign_up_phone_hint"
						        android:inputType="phone"
						        android:textColor="@color/black"/>

		        </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/su_email_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/su_phone_input_layout">

                <com.rejimalson.finddonors.helper.EditextErrorIcon
                    android:id="@+id/su_input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/sign_up_email_hint"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/su_pwd_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/su_email_input_layout"
                android:layout_marginTop="10dp">

                <com.rejimalson.finddonors.helper.EditextErrorIcon
                    android:id="@+id/su_input_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/sign_up_pwd_hint"
                    android:inputType="textPassword"
                    android:textColor="@color/black"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/su_cpwd_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/su_pwd_input_layout"
                android:layout_marginTop="10dp">

                <com.rejimalson.finddonors.helper.EditextErrorIcon
                    android:id="@+id/su_input_cpwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/sign_up_cpwd_hint"
                    android:inputType="textPassword"
                    android:textColor="@color/black"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sign_up_btn_id"
                android:layout_below="@+id/su_cpwd_input_layout"
                android:text="@string/sign_up_btn"
                android:textColor="@color/white"
                android:background="@color/actionBarColor"
                android:layout_marginTop="40dp"
                android:textSize="16sp"
                android:elevation="2dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/su_relativeLayout"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_terms"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/terms_color"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:gravity="center_horizontal"/>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>
