<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:id="@+id/activity_edit_personal_details"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:focusableInTouchMode="true"
		tools:context="com.rejimalson.finddonors.activity.EditPersonalDetailsActivity">

		<ScrollView
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<RelativeLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="25dp"
						android:paddingBottom="25dp">

						<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:id="@+id/full_name_label"
								android:text="@string/full_name_label"
								android:textSize="12sp"
								android:layout_marginLeft="20dp"
								android:layout_marginStart="20dp"/>

						<EditText
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:id="@+id/full_name_input"
								android:layout_below="@+id/full_name_label"
								android:hint="@string/full_name_label"
								android:inputType="textPersonName|textCapWords"
								android:background="@android:color/transparent"
								android:layout_marginLeft="20dp"
								android:layout_marginStart="20dp"
								android:layout_marginRight="20dp"
								android:layout_marginEnd="20dp"
								android:layout_marginTop="15dp"/>

						<View
								android:layout_width="match_parent"
								android:layout_height="1dp"
								android:id="@+id/divider1"
								android:layout_below="@+id/full_name_input"
								android:background="@color/hintColor"
								android:layout_marginTop="15dp"
								android:layout_marginLeft="20dp"
								android:layout_marginStart="20dp"
								android:layout_marginRight="18dp"
								android:layout_marginEnd="18dp"/>

						<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:id="@+id/blood_grp_label"
								android:layout_below="@+id/divider1"
								android:text="@string/blood_group_label"
								android:textSize="12sp"
								android:layout_marginTop="15dp"
								android:layout_marginLeft="20dp"
								android:layout_marginStart="20dp"/>

						<Spinner
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:id="@+id/blood_grp_spinner"
								android:layout_below="@+id/blood_grp_label"
								android:layout_marginLeft="14dp"
								android:layout_marginStart="14dp"
								android:layout_marginRight="3dp"
								android:layout_marginEnd="3dp"
								android:spinnerMode="dialog"
								android:background="@android:color/transparent"/>

						<View
								android:layout_width="match_parent"
								android:layout_height="1dp"
								android:layout_below="@+id/blood_grp_spinner"
								android:background="@color/hintColor"
								android:layout_marginLeft="20dp"
								android:layout_marginStart="20dp"
								android:layout_marginRight="18dp"
								android:layout_marginEnd="18dp"/>

						<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:id="@+id/gender_label"
								android:layout_below="@+id/blood_grp_spinner"
								android:text="@string/gender_label"
								android:textSize="12sp"
								android:layout_marginTop="20dp"
								android:layout_marginLeft="20dp"
								android:layout_marginStart="20dp"/>

						<Spinner
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:id="@+id/gender_spinner"
								android:layout_below="@+id/gender_label"
								android:layout_marginLeft="14dp"
								android:layout_marginStart="14dp"
								android:layout_marginRight="3dp"
								android:layout_marginEnd="3dp"
								android:background="@android:color/transparent"
								android:spinnerMode="dialog"/>
						<View
								android:layout_width="match_parent"
								android:layout_height="1dp"
								android:layout_below="@+id/gender_spinner"
								android:background="@color/hintColor"
								android:layout_marginLeft="20dp"
								android:layout_marginStart="20dp"
								android:layout_marginRight="18dp"
								android:layout_marginEnd="18dp"/>

						<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:id="@+id/birthday_label"
								android:layout_below="@+id/gender_spinner"
								android:text="@string/birth_day_label"
								android:textSize="12sp"
								android:layout_marginTop="20dp"
								android:layout_marginLeft="20dp"
								android:layout_marginStart="20dp"/>
						<RelativeLayout
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:id="@+id/bday_layout"
								android:layout_below="@+id/birthday_label">

								<TextView
										android:layout_width="match_parent"
										android:layout_height="wrap_content"
										android:id="@+id/select_birthday"
										android:text="@string/select_birthday"
										android:textSize="16sp"
										android:textColor="@color/black"
										android:layout_marginLeft="22dp"
										android:layout_marginStart="22dp"
										android:layout_marginRight="20dp"
										android:layout_marginEnd="20dp"
										android:layout_marginTop="18dp"/>

						</RelativeLayout>

						<View
								android:layout_width="match_parent"
								android:layout_height="1dp"
								android:id="@+id/divider4"
								android:layout_below="@+id/bday_layout"
								android:background="@color/hintColor"
								android:layout_marginTop="20dp"
								android:layout_marginLeft="20dp"
								android:layout_marginStart="20dp"
								android:layout_marginRight="18dp"
								android:layout_marginEnd="18dp"/>

				</RelativeLayout>

		</ScrollView>

		<android.support.design.widget.FloatingActionButton
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/fab_save"
				android:layout_marginBottom="16dp"
				android:layout_marginEnd="16dp"
				android:layout_marginRight="16dp"
				android:src="@drawable/ic_save"
				app:fabSize="normal"
				app:rippleColor="@color/white"
				android:layout_gravity="end|bottom"/>

</android.support.design.widget.CoordinatorLayout>
