<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:id="@+id/activity_edit_contact_details"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:focusableInTouchMode="true"
		android:visibility="invisible"
		tools:context="com.rejimalson.finddonors.activity.EditContactDetailsActivity">

		<android.support.design.widget.FloatingActionButton
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/fab_save"
				android:layout_marginBottom="16dp"
				android:layout_marginEnd="16dp"
				android:layout_marginRight="16dp"
				android:src="@drawable/ic_save"
				app:fabSize="normal"
				app:rippleColor="@color/white"
				android:layout_gravity="end|bottom"/>

		<ScrollView
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<RelativeLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="25dp"
						android:paddingBottom="25dp">

						<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:id="@+id/phone_number_label"
								android:text="@string/phone_number_label"
								android:textSize="12sp"
								android:layout_marginLeft="20dp"
								android:layout_marginStart="20dp"/>

						<EditText
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:id="@+id/phone_number_input"
								android:layout_below="@+id/phone_number_label"
								android:hint="@string/phone_number_label"
								android:inputType="phone"
								android:background="@android:color/transparent"
								android:layout_marginLeft="20dp"
								android:layout_marginStart="20dp"
								android:layout_marginRight="20dp"
								android:layout_marginEnd="20dp"
								android:layout_marginTop="15dp"/>

						<View
								android:layout_width="match_parent"
								android:layout_height="1dp"
								android:id="@+id/divider1"
								android:layout_below="@+id/phone_number_input"
								android:background="@color/hintColor"
								android:layout_marginTop="15dp"
								android:layout_marginLeft="20dp"
								android:layout_marginStart="20dp"
								android:layout_marginRight="18dp"
								android:layout_marginEnd="18dp"/>

						<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:id="@+id/state_label"
								android:layout_below="@+id/divider1"
								android:text="@string/state_label"
								android:textSize="12sp"
								android:layout_marginTop="15dp"
								android:layout_marginLeft="20dp"
								android:layout_marginStart="20dp"/>

						<Spinner
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:id="@+id/state_spinner"
								android:layout_below="@+id/state_label"
								android:layout_marginLeft="14dp"
								android:layout_marginStart="14dp"
								android:layout_marginRight="3dp"
								android:layout_marginEnd="3dp"
								android:spinnerMode="dialog"
								android:background="@android:color/transparent"/>

						<View
								android:layout_width="match_parent"
								android:layout_height="1dp"
								android:layout_below="@+id/state_spinner"
								android:background="@color/hintColor"
								android:layout_marginLeft="20dp"
								android:layout_marginStart="20dp"
								android:layout_marginRight="18dp"
								android:layout_marginEnd="18dp"/>
						<RelativeLayout
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:id="@+id/district_spinner_layout"
								android:layout_below="@+id/state_spinner"
								android:visibility="invisible">

								<TextView
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										android:id="@+id/district_label"
										android:text="@string/district_label"
										android:textSize="12sp"
										android:layout_marginTop="20dp"
										android:layout_marginLeft="20dp"
										android:layout_marginStart="20dp"/>

								<Spinner
										android:layout_width="match_parent"
										android:layout_height="wrap_content"
										android:id="@+id/district_spinner"
										android:layout_below="@+id/district_label"
										android:layout_marginLeft="14dp"
										android:layout_marginStart="14dp"
										android:layout_marginRight="3dp"
										android:layout_marginEnd="3dp"
										android:background="@android:color/transparent"
										android:spinnerMode="dialog"/>
								<View
										android:layout_width="match_parent"
										android:layout_height="1dp"
										android:layout_below="@+id/district_spinner"
										android:background="@color/hintColor"
										android:layout_marginLeft="20dp"
										android:layout_marginStart="20dp"
										android:layout_marginRight="18dp"
										android:layout_marginEnd="18dp"/>

						</RelativeLayout>

				</RelativeLayout>

		</ScrollView>

</android.support.design.widget.CoordinatorLayout>
